--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@storybook/addon-actions": "^6.4.18",
     "@storybook/addon-links": "^6.4.18",
     "@storybook/addons": "^6.4.18",
+    "@storybook/cli": "^6.5.9",
+    "@storybook/preact": "^6.5.9",
     "@storybook/react": "^6.4.18",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
@@ -49,10 +51,11 @@
     "eslint": "^7.5.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^4.2.5",
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.8.0",
+    "preact": "^10.10.0",
     "prettier": "2.0.5",
     "pretty-quick": "^2.0.1",
     "prop-types": "^15.7.2",
@@ -61,8 +64,8 @@
     "style-loader": "^1.0.0",
     "svg-url-loader": "^3.0.2",
     "terser-webpack-plugin": "^2.1.0",
+    "tinykeys": "^1.3.0",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "tinykeys": "^1.3.0"
+    "webpack-cli": "^3.3.9"
   }
 }
